# affiliate-rs

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml
api/: .env.example  Cargo.toml
api/.sqlx/: query-2447cbc3b8173ea64745c32abff0b137e9558d6e5a39455d737149a04f009dda.json  query-328322a6006b6584bf38f3f8de5ab186840d9a45ade59d60357a2bb6906d729e.json  query-3dc7466f46ac0114ad293b7156636b8b55fbdc548524c4cf3b9a9481ec34149d.json  query-497d76e6f052d073a8c1bad75e4d9e836bd1c6dd84472e94dc6d3a21d487b5a7.json  query-4b89fce9d2fe18f71f053b52ab85febd5db8bd2f04fba6913fbf870013b620f1.json  query-7af932a6d84a925fd011e75306a79cca9f7dad9733cec91fb9febfd77339c5f5.json  query-940c94848ca8881e6e9944d17caba560d27043f98d0a8d120863e0341bf3979d.json  query-99055e16befd5b87bb696e8187f7859f73b028787ba2b46c041a8977f5455b41.json  query-bbdf20b953b5ac8accb0193afd6d3f5e3cd95be31ec9643014b9a6c522650c2b.json  query-bc416090784f6ff0aac3b278f89dc7e3f62cdd176db3eb2aafd6f563512503dc.json  query-c766518e948f10c230100cc5f98ee2b8ead659dce050c66f890605595f39f6ae.json  query-d53970a7d50c852fe3175334a6c80d01f9ab5f6d38aabee4f014a0ceed4015b0.json  query-dfd7235cbbb5e2e4d28f93f0f6b7a48e5ce2f6b4f48d26f7a63acd1a8aaae277.json  query-f989a077419f9451f6cea54916a2b9e6fecfd0203102fef90f8f56476e99036f.json  query-fcd2ad8f64c14aea44ce0df696e85b819bbb6ddddb8bf39a177d6ff00439ddbc.json
api/migrations/: 20260325035604_create_affiliates.sql  20260325050835_add_destination_url.sql  20260325053326_create_click_logs.sql  20260325060311_create_conversions.sql  20260325060316_add_sub_id_to_click_logs.sql
(+29 files in other folders)
